--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="Do you have any website project? Let's collaborate with me and build wonderfull project. Come and check my portfolio with Jabalnur" />
     <meta property="og:image" content="assets/img/about.jpg" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://jabalnurit.github.io/" />
     <meta property="og:type" content="website" />
 
 
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/Jabalnur-CV.pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
